# Workroom

./: CMakeLists.txt  collection.cpp  collection.h  collectionfile.cpp  collectionfile.h  collectionmanager.cpp  collectionmanager.h  imagefile.cpp  imagefile.h  mainwindow.cpp  mainwindow.h  viewerfactory.cpp  viewerfactory.h
